# nomdebebe

./: .gitignore  README.md  pubspec.yaml
app/: CHANGELOG.md  NAMES.md  README.md  names.ods  pubspec.yaml
app/android/app/: build.gradle
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: keys.dart  main.dart  themes.dart
app/lib/blocs/: debug_logger.dart
app/lib/models/: box.dart  filter.dart  name.dart  nullable.dart  sex.dart
app/lib/providers/: names_provider.dart
app/lib/repositories/: names_repository.dart  settings_repository.dart  shared_repository.dart
app/lib/screens/: disliked_screen.dart  explore_screen.dart  liked_screen.dart  name_details_screen.dart  (+4 more)
app/test/: mock_names_provider.dart  names_test.dart  widget_test.dart
app/web/: index.html  manifest.json
assets/: namekit.db
lib/: keys.dart  main.dart  themes.dart
lib/models/: filter.dart  name.dart  sex.dart
lib/providers/: names_provider.dart
lib/repositories/: names_repository.dart  settings_repository.dart
lib/screens/: liked_screen.dart  settings_screen.dart  undecided_screen.dart
lib/widgets/: name_card.dart  name_tile.dart
names/: .gitignore  generate-FR.sh  generate.sh
server/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-build.sh  docker-push.sh  docker-run.sh  version.env
server/src/: db.rs  main.rs  name.rs
web/: index.html
website/: Makefile
website/images/: iPhone 12 mini - White - Vertical.psd
website/public/: index.html  privacy.html  style.css  terms.html
website/style/: fonts.scss  style.scss
(+50 files in other folders)
