[package]
name = "nomdebebe-server"
version = "1.0.0-dev.1"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
edition = "2018"

[dependencies]
actix-web = "3"
r2d2 = "0.8"
r2d2_sqlite = "0.18"
rusqlite = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
harsh = "0.2"
anyhow = "1.0"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
rand = "0.8"
once_cell = "1.7"
chrono = "0.4"

