[package]
name = "nomdebebe-server"
version = "1.0.0-dev.2"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
r2d2 = "0.8.9"
r2d2_sqlite = "0.19.0"
rusqlite = "0.26.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
dotenv = "0.15.0"
harsh = "0.2.1"
anyhow = "1.0.44"
log = "0.4.14"
fern = { version = "0.6.0", features = ["colored"] }
rand = "0.8.4"
once_cell = "1.8.0"
chrono = "0.4.19"

